# retroid-pocket-classic-compendium

./: 404.html  README.md  _config.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_publish.yml
_inc/css/: custom.css
apps/: index.html
configuration/: es_systems.xml
docs/: apps.md  esde.md  gallery.md  index.md  retroarch.md
docs/_inc/css/: custom.css
esde/: index.html
gallery/: index.html
retroarch/: index.html
search/: search_index.json
